# gnn-diffusion

./: readme.org
cascade-generator/: app.py  app.py~  pyproject.toml
cascade-generator/cascade_generator/: generator.py  generator.py~
cascade-generator/cascade_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cascade-generator/cascade_generator/diffusion/: __init__.py  __init__.py~
cascade-generator/tests/: ic_test.py~  test_ic.py  test_ic.py~
dgl-diffusion/: Dockerfile  app.py  pyproject.toml
dgl-diffusion/dgl_diffusion/: data.py  loss.py  model.py  persistance.py  util.py
dgl-diffusion/tests/: test_dgl_diffusion.py  test_dgl_module.py
