[tool.poetry]
name = "cascade-generator"
version = "0.1.0"
description = ""
authors = ["Antonio Caliò <acalio@dimes.unical.it>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"
cython = "^0.29.22"
networkit = "^8.1"
click = "^7.1.2"
pandas = "^1.2.3"
pytest = "^6.2.2"
IPython = "^7.21.0"
tqdm = "^4.59.0"

[tool.poetry.dev-dependencies]
nose2 = "^0.10.0"
IPython = "^7.21.0"
python-language-server = {extras = ["all"], version = "^0.36.2"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
