[tool.poetry]
name = "dgl-diffusion"
version = "0.1.0"
description = ""
authors = ["Antonio Caliò <acalio@dimes.unical.it>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.8.0"
click = "^7.1.2"
dgl = "^0.6.0"
pandas = "^1.2.3"
tqdm = "^4.59.0"
networkx = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
nose2 = "^0.10.0"
python-language-server = {extras = ["all"], version = "^0.36.2"}
ipython = "^7.21.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
